--- a/src/main/resources/velocity/pages/home.vm
+++ b/src/main/resources/velocity/pages/home.vm
@@ -1,3 +1,8 @@
 #header()
-<h1>IP</h1>
+<h1>Video List</h1>
+<ul>
+ #foreach( ${video} in ${videos} )
+     <li>${video.description}</li>
+ #end
+</ul>
 #footer()
